--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<title>Poe Atlas Tracker</title>
+		<title>PoE Atlas Tracker</title>
 	</head>
 	<body>
 		<div id="root"></div>
